fix spacing and background in contact page

--- a/portfolio-website/src/components/EmailContact/EmailContact.css
+++ b/portfolio-website/src/components/EmailContact/EmailContact.css
@@ -10,10 +10,10 @@
 
 .contactElement,
 .contactButton {
-  margin-top: 40px;
+  margin-top: 32px;
   resize: none;
   padding: 10px 12px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   border-color: #fff;
   border-width: 1px;
